# smake

./: .gitignore  Cargo.toml
src/: api.rs  cli.rs  main.rs
