[package]
name = "smake"
version = "0.1.0"
description = "A simple CLI tool for running Lua scripts."
authors = ["Antfroze"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive", "cargo"] }
mlua = { version = "0.8.9", features = ["luau", "vendored"] }
shell-words = "1.1.0"
